Update standards.md